# NAND_flash

./: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  prj_ext.conf  sample.yaml  west.yml
boards/arm/: cpuapp.overlay  nrf5340dk_nrf5340.overlay
dhara/dhara/: journal.c  map.c  nand.c  nand.h
dts/bindings/: custom,nand-disk.yaml
src/: NAND_flash.h  littlefs.code-workspace  main.c  output.csv  output100MHz.csv  output100MHz_latency_improved.csv  plotting.py  vfs_NAND_flash.c  vfs_NAND_flash.h
src/NAND_FLASH_DHARA/: Kconfig
src/NAND_FLASH_DHARA/dhara/dhara/: nand.c
src/NAND_FLASH_DHARA/inc/: USB_mass_storage.h  example_handle.h  health_monitoring.h  nand_driver.h  nand_flash_devices.h  nand_oper.h  nand_top_layer.h  vfs_NAND_flash.h
src/NAND_FLASH_DHARA/scripts/: buffer1.txt  buffer16test.txt  buffer4.txt  buffer_no.txt  corrupted_log_data5.txt  count_132_optimization.py  data_rate.py  data_rate_zephyr_timestamp.py  deserialize_plot_IMU_data.py  gc_factor_analysis.py  gc_factor_analysis_single.py  log_data.txt  log_data0.txt  log_data1.txt  log_data10.txt  log_data15.txt  log_data20.txt  log_data30.txt  log_data40.txt  log_data5.txt  log_dataSPI16MHz.txt  log_data_16MHz_SPI.txt  log_data_2MHz_SPI.txt  log_data_4MHz_SPI.txt  log_data_8MHz_SPI.txt  log_experimental.txt  mean_data_rate.py  power_optimization_FTL.py
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_1/: 1  2
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_11/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_12/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_13/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_17/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_18/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_19/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_2/: 1  2
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_20/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_21/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_23/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_3/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_4/: 1  2
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_5/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_6/: 1
src/NAND_FLASH_DHARA/scripts/Motion_tracker_data/REC_9/: 1
src/NAND_FLASH_DHARA/src/: USB_mass_storage.c  diskio_nand.c  example_handle.c  health_monitoring.c  nand_driver.c  nand_oper.c  nand_top_layer.c  vfs_NAND_flash.c
src/NAND_FLASH_DHARA/tests/: main_nand_tests.c  simulation_test.c  simulation_test.h  spi_nand_oper_tests.c  spi_nand_oper_tests.h  test_disk_access.c  test_spi_nand_top_layer.c  test_spi_nand_top_layer.h  vfs_test.c
src/SPI_NAND_DHARA/: NAND_handle.h  USB_mass_storage.c  dhara_glue.c  diskio_nand.c  diskio_nand.h  example_handle.c  example_handle.h  ftl_to fs_link.h  ftl_to_fs_link.h  health_monitoring.c  nand_flash_devices.h  nand_oper.c  nand_top_layer.c  nand_top_layer.h  spi_nand_oper.c  spi_nand_oper.h  vfs_NAND_flash.c
src/SPI_NAND_DHARA/buffer_to_store_temp_files/: dhara_glue.c  nand copy.c  spitest.c
src/dts/bindings/: custom,nand-disk.yaml
src/esp/: dhara_glue.c  nand.h  spi_nand_oper.h
src/tests/: main_nand_tests.c  main_nand_tests.h  simulation_test.c  simulation_test.h  spi_nand_oper_tests.c  spi_nand_oper_tests.h  test_disk_access.c  test_disk_access.h  test_spi_nand_top_layer.c  test_spi_nand_top_layer.h  vfs_test.c  vfs_test.h
